added random poem picker

--- a/voice-note.html
+++ b/voice-note.html
@@ -25,8 +25,12 @@
     </style>
 </head>
 
-<body>
-    <button id="startRecording">Start</button>
+<body >
+    <div> Please press record and read out this text</div>
+    <br>  <br>
+    <div id="factDisplay"></div>
+      <br>  <br>
+    <button id="startRecording">Record</button>
     <button id="stopRecording">Stop</button>
     <br>
     <p id="isRecording">Click start button to record</p>
